# mediapipe_gesture_recognizer

./: README.md  main.py  requirements.txt
Windows/: pyproject.toml
Windows/GestureRecognizer/: GestureRecognizer.py
